--- a/julia_set.ipynb
+++ b/julia_set.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "So we have to choose a complex number $z_0$ and determine whatever happens to $z_n$ as $n$ goes to infinity.\n",
     "\n",
-    "To help you to elaborate your conjecture you can use the following python instruction:  <b> square_orbit( $x_0$, $y_0$)</b>.\n",
+    "To help you elaborate your conjecture you can use the following python instruction:  <b> square_orbit( $x_0$, $y_0$)</b>.\n",
     "\n",
     ">Where: $x_0$ is the real part of $z_0$ and $y_0$ is its imaginary part.\n",
     "\n",
@@ -48,13 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e706bf2a6eb45568ea350c5ecdc06da",
+       "model_id": "5cb7473c79234c7fbdc55da075f66f47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +117,7 @@
     "       \\forall n \\in \\mathbb{N},  ~z_{n+1}=z_n^2+c\n",
     "    \\end{array} $\n",
     " \n",
-    "   It is now a lot more complicated to determine whether $z_0$ is an escape point or an captive one while iterating our process, especially since it depends of the chosen value $c$.\n",
+    "   It is now a lot more complicated to determine whether $z_0$ is an escape point or a captive one while iterating our process, especially since it depends on the chosen value $c$.\n",
     " \n",
     " We can still have a guess with the python instruction:  <b> plot_orbit( $x_0$, $y_0$,, $a$, $b$ )</b>.\n",
     ">Where: \n",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
