--- a/julia_set.ipynb
+++ b/julia_set.ipynb
@@ -11,7 +11,7 @@
     "# Fractal sets and how to draw them</center>\n",
     "\n",
     "\n",
-    "The main point of this session is to use complex numbers and algorithms to produce digital pictures representing Julia sets. In order to do so, the session will be devided in two parts:\n",
+    "The main point of this session is to use complex numbers and algorithms to produce digital pictures representing Julia sets. In order to do so, the session will be divided into two parts:\n",
     "\n",
     "* The first one is needed to understand the mathematical process applied to some initial complex number $z_0$ and which will be iterated all along to obtain the Julia set.\n",
     "\n",
@@ -34,7 +34,7 @@
     "\n",
     ">Where: $x_0$ is the real part of $z_0$ and $y_0$ is its imaginary part.\n",
     "\n",
-    "This function will plot all the values of the sequence in the complex plane for you, here is an example below, you just need to change the numbers to fit which starting point you want to try. You can also change the values by dragging the mouse over $z_0$!"
+    "This function will plot all the values of the sequence in the complex plane for you, below is an example, you just need to change the numbers to fit which starting point you want to try. You can also change the values by dragging the mouse over $z_0$!"
    ]
   },
   {
@@ -167,7 +167,7 @@
     "\n",
     "Then, we just have to compute the terms of the sequence and according to the final results $z_0$ will be deemed as an escape point or a captive one and the matching pixel will be dyed accordingly. \n",
     "\n",
-    "To do so are willing to admit that the following criterion is true:\n",
+    "To do so we are willing to admit that the following criterion is true:\n",
     "\n",
     "> <b> Criterion: </b>  If there is a value of $n$ such as $|z_n|$ > 2, $z_0$ is necessarily an escape point.\n",
     "\n",
@@ -294,7 +294,7 @@
     "* Julia sets are deeply connected to another famous fractal set, the Mandelbrot set. Unfortunately, we don't have enough time for Mandelbrot today but you can find how to draw the Mandelbrot set on the internet and get it by slightly modifying the previous julia function!\n",
     "\n",
     "\n",
-    "* Fractal sets look way better with colors, maybe you want to find an interesting way to picture them since grayscale is a bit dull, if so tell me about your ideas and I'll help you to implement them into the julia function."
+    "* Fractal sets look way better with colors, maybe you want to find an interesting way to picture them since grayscale is a bit dull, if so tell me about your ideas I'll help you to implement them into the julia function."
    ]
   }
  ],
