--- a/julia_set.ipynb
+++ b/julia_set.ipynb
@@ -81,7 +81,7 @@
     "\n",
     "Let's see if we can explain that, first of all: what happens when a complex number $z$ is squared? Well, it is easier to use the exponential form of $z$ here: $~z=re^{i\\theta}~$ so $~z^2=r^2e^{2i\\theta}$\n",
     "<img src= \"z2.png\" style = 'width: 300px; height: 339' />\n",
-    "The graph below is an example of such an operation from a gemetrical point of view.\n",
+    "The graph below is an example of such an operation from a geometrical point of view.\n",
     "\n",
     "When a complex number is squared, its modulus is $\\dots$ but its argument is $\\dots$.\n",
     "\n",
@@ -161,7 +161,7 @@
     "\n",
     "Let us try another approach, but first we need to undersand how a digital image is displayed.\n",
     "\n",
-    "> The key idea is that when you have a picture on your screen, it is compound of tiny luminous squares called pixels and each pixel is given a color to match the image displayed, whatever it is. So in the end, a digital image is nothing else than a grid of coloured pixels, which in maths is called a matrix.\n",
+    "> The key idea is that when you have a picture on your screen, it is composed of tiny luminous squares called pixels and each pixel is given a color to match the image displayed, whatever it is. So in the end, a digital image is nothing else than a grid of coloured pixels, which in maths is called a matrix.\n",
     "\n",
     "So, to draw our Julia set we are going to start with an empty image in which each pixel is equivalent to an initial value $z_0$.\n",
     "\n",
