--- a/julia_set.ipynb
+++ b/julia_set.ipynb
@@ -180,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set up of the window\n",
+    "# setup of the window\n",
     "\n",
     "x_min = -1.5\n",
     "x_max =  1.5\n",
@@ -206,7 +206,7 @@
     "    \n",
     "    c = complex(a,b)\n",
     "    \n",
-    "    img = np.zeros((width,width,3),dtype=np.uint8) # define the image as a width*width matrix\n",
+    "    img = np.zeros((width,width,3),dtype=np.uint8) # define the image as a square matrix\n",
     "\n",
     "    for x in range(width): # the first loop is going through the columns of the grid\n",
     "\n",
@@ -214,17 +214,18 @@
     "\n",
     "                k = 0     # k is index of the sequence\n",
     "\n",
-    "                # the complex coordinates of the initiale points follows:\n",
+    "                # the complex coordinates of the initial points follows:\n",
     "                \n",
     "                x0, y0 = pixel_to_complex(x,y)\n",
     "                \n",
     "                z = complex(x0,y0) # here is z_0\n",
     "\n",
     "                while k <= n_max and abs(z) <= 2 : # abs(z) is the modulus of z in python\n",
-    "                    z = z**2 + c   # the next value for z is calculated and replace the former one, ** means power in python\n",
+    "                    z = z**2 + c   # the next value for z is calculated and replace the former one\n",
+									#** means power in python\n",
     "                    k = k + 1      # the index of the sequence increases by 1\n",
     "\n",
-    "                if k > n_max and  abs(z) <=2:     # the modulus is still lesser than 2, we consider z as captive\n",
+    "                if k > n_max and  abs(z) <=2:     # the modulus is still lesser than 2, we consider z0 as captive\n",
     "                    img[y,x] = 0  # pixel color is set as black\n",
     "\n",
     "                else:       # otherwise it is necessarily an escape point\n",
