--- a/julia_set.ipynb
+++ b/julia_set.ipynb
@@ -221,11 +221,10 @@
     "                z = complex(x0,y0) # here is z_0\n",
     "\n",
     "                while k <= n_max and abs(z) <= 2 : # abs(z) is the modulus of z in python\n",
-    "                    z = z**2 + c   # the next value for z is calculated and replace the former one\n",
-	"								#** means power in python\n",
+    "                    z = z**2 + c   # the next value for z is calculated and replace the former one, ** means power in python\n",
     "                    k = k + 1      # the index of the sequence increases by 1\n",
     "\n",
-    "                if k > n_max and  abs(z) <=2:     # the modulus is still lesser than 2, we consider z0 as captive\n",
+    "                if k > n_max and  abs(z) <=2:     # the modulus is still lesser than 2, we consider z as captive\n",
     "                    img[y,x] = 0  # pixel color is set as black\n",
     "\n",
     "                else:       # otherwise it is necessarily an escape point\n",
