--- a/julia_set.ipynb
+++ b/julia_set.ipynb
@@ -75,8 +75,8 @@
    "metadata": {},
    "source": [
     "   >So we can observe two cases: \n",
-    "* Either $\\dots\dots\dots\dots\dots$\n",
-    "* Or it remains $\\dots\dots\dots\dots\dots$\n",
+    "* Either $\\dots\\dots\\dots\\dots\\dots$\n",
+    "* Or it remains $\\dots\\dots\\dots\\dots\\dots$\n",
     "\n",
     "\n",
     "Let's see if we can explain that, first of all: what happens when a complex number $z$ is squared? Well, it is easier to use the exponential form of $z$ here: $~z=re^{i\\theta}~$ so $~z^2=r^2e^{2i\\theta}$\n",
