--- a/julia_set.ipynb
+++ b/julia_set.ipynb
@@ -83,27 +83,27 @@
     "<img src= \"z2.png\" style = 'width: 300px; height: 339' />\n",
     "The graph below is an example of such an operation from a geometrical point of view.\n",
     "\n",
-    "When a complex number is squared, its modulus is $\\dots$ but its argument is $\\dots$.\n",
+    "When a complex number is squared, its modulus is $\\dots\\dots\\dots\\dots\\dots$ but its argument is $\\dots\\dots\\dots\\dots\\dots$.\n",
     "\n",
     "Let's put the argument aside and think a bit more about the modulus:\n",
     "\n",
     "* If $|z|<1$, $|z|^2 \\dots |z|$.\n",
     "\n",
-    "   > Hence if we choose $z_0$ <b>inside the unit circle</b> and we keep squaring the results, the terms of the sequence $\\dots$.\n",
+    "   > Hence if we choose $z_0$ <b>inside the unit circle</b> and we keep squaring the results, the terms of the sequence $\\dots\\dots\\dots\\dots\\dots$.\n",
     "\n",
     "* If $|z|=1$, $|z|^2 \\dots |z|$.\n",
     "\n",
-    "   > Hence if we choose $z_0$ <b>on the unit circle</b> and we keep squaring the results,  the terms of the sequence $\\dots$.\n",
+    "   > Hence if we choose $z_0$ <b>on the unit circle</b> and we keep squaring the results,  the terms of the sequence $\\dots\\dots\\dots\\dots\\dots$.\n",
     "\n",
     "* If $|z|>1$, $|z|^2 \\dots |z|$.\n",
     "\n",
-    "  >  Hence if we choose $z_0$ <b>outside the unit circle</b> and we keep squaring the results,  the terms of the sequence $\\dots$\n",
+    "  >  Hence if we choose $z_0$ <b>outside the unit circle</b> and we keep squaring the results,  the terms of the sequence $\\dots\\dots\\dots\\dots\\dots$\n",
     "\n",
     "In the later case, we will call $z_0$ an <b> escape point </b> because they keep going to infinity while in the two formers it will be called a <b>captive one</b> since they remain bounded.\n",
     "\n",
     "> The <b> Julia set</b> is defined as the boundary between the sets of escape points and captive ones.\n",
     "\n",
-    "So in our case, the Julia set here is $\\dots$.\n",
+    "So in our case, the Julia set here is $\\dots\\dots\\dots\\dots\\dots.\n",
     "\n",
     "### I.2) A bit further\n",
     "\n",
@@ -121,8 +121,8 @@
     " \n",
     " We can still have a guess with the python instruction:  <b> plot_orbit( $x_0$, $y_0$,, $a$, $b$ )</b>.\n",
     ">Where: \n",
-    "*  $x_0$ is the real part of $z_0$ and $y_0$ is its imaginary part.\n",
-    "* $a$ is the real part of $c$ and $b$ is its imaginary part.\n",
+    ">*  $x_0$ is the real part of $z_0$ and $y_0$ is its imaginary part.\n",
+    ">* $a$ is the real part of $c$ and $b$ is its imaginary part.\n",
     "\n",
     "So you have to choose $c = a+ ib$ and then try to determine the boundary between the $z_0= x +iy$ that are escape points and the others. "
    ]
