--- a/julia_set.ipynb
+++ b/julia_set.ipynb
@@ -103,7 +103,7 @@
     "\n",
     "> The <b> Julia set</b> is defined as the boundary between the sets of escape points and captive ones.\n",
     "\n",
-    "So in our case, the Julia set here is $\\dots\\dots\\dots\\dots\\dots.\n",
+    "So in our case, the Julia set here is $\\dots\\dots\\dots\\dots\\dots$.\n",
     "\n",
     "### I.2) A bit further\n",
     "\n",
