--- a/julia_set.ipynb
+++ b/julia_set.ipynb
@@ -119,7 +119,7 @@
     " \n",
     "   It is now a lot more complicated to determine whether $z_0$ is an escape point or a captive one while iterating our process, especially since it depends on the chosen value $c$.\n",
     " \n",
-    " We can still have a guess with the python instruction:  <b> plot_orbit( $x_0$, $y_0$,, $a$, $b$ )</b>.\n",
+    " We can still have a guess with the python instruction:  <b> plot_orbit( $x_0$, $y_0$, $a$, $b$ )</b>.\n",
     ">Where: \n",
     ">*  $x_0$ is the real part of $z_0$ and $y_0$ is its imaginary part.\n",
     ">* $a$ is the real part of $c$ and $b$ is its imaginary part.\n",
