--- a/julia.ipynb
+++ b/julia.ipynb
@@ -164,7 +164,7 @@
    "source": [
     "## II. Programmer une représentation des ensembles de Julia\n",
     "\n",
-    "Même avec la commande $\\text{plot_orbit}$, il reste très difficile de se faire une idée précise de l'ensemble de Julia correspondant à une valeur de $c$ donnée.\n",
+    "Même avec la commande $\text{plot_orbit}$, il reste très difficile de se faire une idée précise de l'ensemble de Julia correspondant à une valeur de $c$ donnée.\n",
     "\n",
     "Essayons une autre approche, mais tout d'abord il nous faut comprendre comment est définie une image numérique.\n",
     "\n",
