--- a/julia.ipynb
+++ b/julia.ipynb
@@ -89,17 +89,17 @@
     "\n",
     "Oublions l'argument un instant et concentrons nous sur le module :\n",
     "\n",
-    "* Si $|z|<1$ alors $|z^2| < |z|$.\n",
+    "* Si $|z|<1$ alors $|z^2| < |z|<1$.\n",
     "\n",
-    "   > Donc si l'on choisit $z_0$ <b>à l'intérieur du cercle unité </b> et que l'on continue à élever les valeurs obtenues au carré, la suite $(|z_n|)$ est géométrique de raison $|z_0|<1$ donc converge vers 0. Ainsi les points d'affixe $(z_n)$ se rapprochent de l'origine lorsque $n$ tend vers $+\\infty$.\n",
+    "   > Donc si l'on choisit $z_0$ <b>à l'intérieur du cercle unité </b> et que l'on continue à élever les valeurs obtenues au carré, la suite $(|z_n|)_{n\in\mathbb{N}}$ est géométrique de raison $|z_0|^2<1$ donc converge vers 0. Ainsi les points d'affixe $(z_n)$ se rapprochent de l'origine lorsque $n$ tend vers $+\\infty$.\n",
     "\n",
-    "* Si $|z|=1$ alors $|z^2| = |z|$.\n",
+    "* Si $|z|=1$ alors $|z^2| = |z|=1$.\n",
     "\n",
-    "   >Donc si l'on choisit $z_0$ <b>sur le cercle unité</b> et que l'on continue à élever les valeurs obtenues au carré, la suite $(|z_n|)$ est constante. Ainsi les points d'affixe $(z_n)$ circulent sur le cercle unité sans nécessairement converger.\n",
+    "   >Donc si l'on choisit $z_0$ <b>sur le cercle unité</b> et que l'on continue à élever les valeurs obtenues au carré, la suite $(|z_n|)_{n\in\mathbb{N}}$ est constante. Ainsi les points d'affixe $(z_n)$ circulent sur le cercle unité sans nécessairement converger.\n",
     "\n",
-    "* Si $|z|>1$ alors $|z^2| > |z|$.\n",
+    "* Si $|z|>1$ alors $|z^2| > |z|>1$.\n",
     "\n",
-    "  > Donc si l'on choisit $z_0$ <b>à l'extérieur du cercle unité</b> et que l'on continue à élever les valeurs obtenues au carré,  la suite $(|z_n|)$ est géométrique de raison $|z_0|>1$, donc divergente. Ainsi les points d'affixe $(z_n)$ s'éloignent indéfiniment de l'origine.\n",
+    "  > Donc si l'on choisit $z_0$ <b>à l'extérieur du cercle unité</b> et que l'on continue à élever les valeurs obtenues au carré,  la suite $(|z_n|)_{n\in\mathbb{N}}$ est géométrique de raison $|z_0|^2>1$, donc divergente. Ainsi les points d'affixe $(z_n)$ s'éloignent indéfiniment de l'origine.\n",
     "\n",
     "Dans le dernier cas, nous appellerons le poitn d'affixe $z_0$ un <b> point d'échappement </b>.\n",
     "\n",
