--- a/julia.ipynb
+++ b/julia.ipynb
@@ -54,7 +54,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09d8eaf01615497a9aefcd6156ec3db6",
+       "model_id": "a9d68103037645bb9417f8718a6b95a0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -74,8 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   >On peut a priori distinguer deux cas : \n",
-    "    >* Soit les points se rapprochent de l'origine du repère, soit ils semblent s'en éloigner indéfiniment.\n",
+    "   >On peut a priori distinguer deux cas :  Soit les points se rapprochent de l'origine du repère, soit ils semblent s'en éloigner indéfiniment.\n",
     "\n",
     "Voyons si nous pouvons expliquer cela : premièrement, que se passe-t-il lorqu'un nombre complexe $z$ est élevé au carré?\n",
     "\n",
@@ -91,15 +90,15 @@
     "\n",
     "* Si $|z|<1$ alors $|z^2| < |z|<1$.\n",
     "\n",
-    "   > Donc si l'on choisit $z_0$ <b>à l'intérieur du cercle unité </b> et que l'on continue à élever les valeurs obtenues au carré, la suite $(|z_n|)_{n\in\mathbb{N}}$ est géométrique de raison $|z_0|^2<1$ donc converge vers 0. Ainsi les points d'affixe $(z_n)$ se rapprochent de l'origine lorsque $n$ tend vers $+\\infty$.\n",
+    "   > Donc si l'on choisit $z_0$ <b>à l'intérieur du cercle unité </b> et que l'on continue à élever les valeurs obtenues au carré, la suite $(|z_n|)_{n\\in\\mathbb{N}}$ est géométrique de raison $|z_0|^2<1$ donc converge vers 0. Ainsi les points d'affixe $(z_n)$ se rapprochent de l'origine lorsque $n$ tend vers $+\\infty$.\n",
     "\n",
     "* Si $|z|=1$ alors $|z^2| = |z|=1$.\n",
     "\n",
-    "   >Donc si l'on choisit $z_0$ <b>sur le cercle unité</b> et que l'on continue à élever les valeurs obtenues au carré, la suite $(|z_n|)_{n\in\mathbb{N}}$ est constante. Ainsi les points d'affixe $(z_n)$ circulent sur le cercle unité sans nécessairement converger.\n",
+    "   >Donc si l'on choisit $z_0$ <b>sur le cercle unité</b> et que l'on continue à élever les valeurs obtenues au carré, la suite $(|z_n|)$ est constante. Ainsi les points d'affixe $(z_n)_{n\\in\\mathbb{N}}$ \"circulent\" sur le cercle unité sans nécessairement converger.\n",
     "\n",
     "* Si $|z|>1$ alors $|z^2| > |z|>1$.\n",
     "\n",
-    "  > Donc si l'on choisit $z_0$ <b>à l'extérieur du cercle unité</b> et que l'on continue à élever les valeurs obtenues au carré,  la suite $(|z_n|)_{n\in\mathbb{N}}$ est géométrique de raison $|z_0|^2>1$, donc divergente. Ainsi les points d'affixe $(z_n)$ s'éloignent indéfiniment de l'origine.\n",
+    "  > Donc si l'on choisit $z_0$ <b>à l'extérieur du cercle unité</b> et que l'on continue à élever les valeurs obtenues au carré,  la suite $(|z_n|)_{n\\in\\mathbb{N}}$ est géométrique de raison $|z_0|^2>1$, donc divergente. Ainsi les points d'affixe $(z_n)$ s'éloignent indéfiniment de l'origine.\n",
     "\n",
     "Dans le dernier cas, nous appellerons le poitn d'affixe $z_0$ un <b> point d'échappement </b>.\n",
     "\n",
@@ -142,7 +141,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "355ff8178c064384a29899fb3fa446dc",
+       "model_id": "8d41ba9999754d848fd534cc426229ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,7 +163,7 @@
    "source": [
     "## II. Programmer une représentation des ensembles de Julia\n",
     "\n",
-    "Même avec la commande *plot_orbit*, il reste très difficile de se faire une idée précise de l'ensemble de Julia correspondant à une valeur de $c$ donnée.\n",
+    "Même avec la commande $\\text{plot_orbit}$, il reste très difficile de se faire une idée précise de l'ensemble de Julia correspondant à une valeur de $c$ donnée.\n",
     "\n",
     "Essayons une autre approche, mais tout d'abord il nous faut comprendre comment est définie une image numérique.\n",
     "\n",
