--- a/julia.ipynb
+++ b/julia.ipynb
@@ -48,13 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9d68103037645bb9417f8718a6b95a0",
+       "model_id": "a99407efe50e44aaa71fee42df7c3ac6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,7 +67,7 @@
     }
    ],
    "source": [
-    "square_orbit( x0 = -0.15, y0 = -0.85)"
+    "square_orbit( x0 = -0.15, y0 = -0.85, cercle = True)"
    ]
   },
   {
@@ -135,13 +135,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d41ba9999754d848fd534cc426229ef",
+       "model_id": "d1c1b0077d384294bd9961ddecaf6eb4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
